<resources>
    <string name="app_name">Inventory App</string>
    <string name="empty_view_title_text">Lets add some product here...</string>
    <string name="action_insert_dummy_data">Insert Dummy Data</string>
    <string name="action_delete_all_entries">Delete All Products</string>
    <string name="hint_product_name">Name</string>
    <string name="hint_product_quantity">Quantity</string>
    <string name="hint_product_company">Company</string>
    <string name="hint_pet_weight">Weight</string>
    <string name="unit_pet_weight">kg</string>
    <string name="category_name">Product Name</string>
    <string name="category_quantity">Product Quantity</string>
    <string name="category_company">Product Company</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="add_image">Add Image</string>
    <string name="product_size_unknown">Unknown</string>
    <string name="product_size_xs">Extra Small</string>
    <string name="product_size_s">Small</string>
    <string name="product_size_m">Medium</string>
    <string name="product_size_l">Large</string>
    <string name="product_size_xl">Extra Large</string>
    <string name="category_size">Product Size</string>
    <string name="category_supplier_email">Supplier Email Id</string>
    <string name="hint_supplier_email">Email-Id</string>
    <string name="category_product_price">Product Price</string>
    <string name="unit_price">$</string>
    <string name="hint_product_price">Price</string>
    <string name="none_available">0</string>
    <string name="action_order">Order</string>
    <string name="editor_activity_title_new_product">Add a new Product</string>
    <string name="editor_activity_title_edit_product">Edit a product</string>
    <string name="empty_view_subtitle_text">Click the round button down below</string>
    <string name="editor_insert_product_successful">Product saved</string>
    <string name="editor_activity_title_edit_pet">Edit Pet</string>
    <string name="editor_insert_product_failed">Error with saving product</string>
    <string name="category_overview">Overview</string>
    <string name="unknown_breed">Unknown breed</string>
    <string name="category_measurement">Measurement</string>
    <string name="editor_update_product_successful">Product Data updated</string>
    <string name="editor_update_product_failed">Error with updating product</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="editor_delete_product_successful">Product deleted from Inventory</string>
    <string name="editor_delete_product_failed">Error with deleting product</string>
    <string name="delete_dialog_msg">Delete this product?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
</resources>
